# document-summariser

./: .gitignore  LICENSE  README.md
client/: package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: App.tsx  index.css  index.tsx
client/src/components/: DocumentInput.tsx  DocumentSummariser.tsx
client/src/hooks/: useSummariser.ts
server/: main.py  pyproject.toml
